--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ dependencies {
 
 appengine {  // App Engine tasks configuration
     run {      // local (dev_appserver) configuration (standard environments only)
-        port = 8080                 // default
+        port = 8080
+        jvmFlags = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005', "-Dappengine.fullscan.seconds=5"]
     }
 
     deploy {   // deploy configuration
