--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     compile group: 'com.google.appengine', name: 'appengine-api-1.0-sdk', version: '1.9.58'
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+
+    compileTest group: 'com.google.api-client', name:'google-api-client', version:'1.23.0'
+    compileTest group: 'com.google.oauth-client', name:'google-oauth-client-jetty', version:'1.23.0'
+    compileTest group: 'com.google.apis', name:'google-api-services-gmail', version:'v1-rev77-1.23.0'
 }
 
 appengine {  // App Engine tasks configuration
