--- a/build.gradle
+++ b/build.gradle
@@ -26,13 +26,20 @@ dependencies {
     compile group: 'com.googlecode.objectify', name: 'objectify', version: '5.1.21'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
-    compile group: 'com.google.appengine', name: 'appengine-api-1.0-sdk', version: '1.9.58'
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compile group: 'com.github.rholder', name: 'guava-retrying', version: '2.0.0'
+    compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
 
-    compileTest group: 'com.google.api-client', name:'google-api-client', version:'1.23.0'
-    compileTest group: 'com.google.oauth-client', name:'google-oauth-client-jetty', version:'1.23.0'
-    compileTest group: 'com.google.apis', name:'google-api-services-gmail', version:'v1-rev77-1.23.0'
+    compile group: 'com.google.appengine', name: 'appengine-tools-sdk', version: '1.9.60'
+    compile group: 'com.google.appengine', name: 'appengine-api-labs', version: '1.9.60'
+    compile group: 'com.google.appengine', name: 'appengine-api-1.0-sdk', version: '1.9.60'
+
+    testCompile group: 'com.google.appengine', name: 'appengine-testing', version: '1.9.60'
+    testCompile group: 'com.google.appengine', name: 'appengine-api-stubs', version: '1.9.60'
+    testCompile group: 'com.google.api-client', name:'google-api-client', version:'1.23.0'
+    testCompile group: 'com.google.oauth-client', name:'google-oauth-client-jetty', version:'1.23.0'
+    testCompile group: 'com.google.apis', name:'google-api-services-gmail', version:'v1-rev77-1.23.0'
 }
 
 appengine {  // App Engine tasks configuration
@@ -51,5 +58,5 @@ appengine {  // App Engine tasks configuration
 group = 'it.simostefi.wedding'   // Generated output GroupId
 version = '1.0-SNAPSHOT'          // Version in generated output
 
-sourceCompatibility = 1.7  // App Engine Standard uses Java 7
-targetCompatibility = 1.7  // App Engine Standard uses Java 7
+sourceCompatibility = 1.8  // App Engine Standard uses Java 8
+targetCompatibility = 1.8  // App Engine Standard uses Java 8
