--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,37 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
 
-    <!-- AUTH -->
+    <filter>
+        <filter-name>ObjectifyFilter</filter-name>
+        <filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>ObjectifyFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <servlet>
-        <servlet-name>CommentsServlet</servlet-name>
-        <servlet-class>it.simostefi.wedding.servlet.CommentsServlet</servlet-class>
+        <servlet-name>ConfigServlet</servlet-name>
+        <servlet-class>com.policlaudio.servlet.config.ConfigServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>CommentsServlet</servlet-name>
-        <url-pattern>/servlet/comments</url-pattern>
+        <servlet-name>ConfigServlet</servlet-name>
+        <url-pattern>/config/update</url-pattern>
     </servlet-mapping>
 
-    <!-- AUTH -->
+    <servlet>
+        <servlet-name>RegistrationFilter</servlet-name>
+        <servlet-class>com.policlaudio.servlet.filter.EntitiesFilter</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RegistrationFilter</servlet-name>
+        <url-pattern>/registration</url-pattern>
+    </servlet-mapping>
 
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>all</web-resource-name>
             <url-pattern>/*</url-pattern>
         </web-resource-collection>
-        <!--<auth-constraint>
-            <role-name>admin</role-name>
-        </auth-constraint>
-        <user-data-constraint>
-            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
-        </user-data-constraint>-->
     </security-constraint>
 
     <security-constraint>
         <web-resource-collection>
-            <web-resource-name>test</web-resource-name>
-            <url-pattern>/test.jsp</url-pattern>
+            <web-resource-name>config</web-resource-name>
+            <url-pattern>/config</url-pattern>
         </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+        </auth-constraint>
+        <user-data-constraint>
+            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+        </user-data-constraint>
     </security-constraint>
 
 </web-app>
