--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
     compile group: 'com.github.rholder', name: 'guava-retrying', version: '2.0.0'
     compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 
     compile group: 'com.google.appengine', name: 'appengine-tools-sdk', version: '1.9.60'
     compile group: 'com.google.appengine', name: 'appengine-api-labs', version: '1.9.60'
@@ -45,8 +46,8 @@ dependencies {
 appengine {  // App Engine tasks configuration
     run {      // local (dev_appserver) configuration (standard environments only)
         port = 8080
-        //jvmFlags = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005', "-Dappengine.fullscan.seconds=5"]
-        jvmFlags = ["-Dappengine.fullscan.seconds=5"]
+        jvmFlags = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005', "-Dappengine.fullscan.seconds=5"]
+        //jvmFlags = ["-Dappengine.fullscan.seconds=5"]
     }
 
     deploy {   // deploy configuration
