--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 
+    compile group: 'com.google.appengine.tools', name: 'appengine-gcs-client', version: '0.7'
     compile group: 'com.google.appengine', name: 'appengine-tools-sdk', version: '1.9.60'
     compile group: 'com.google.appengine', name: 'appengine-api-labs', version: '1.9.60'
     compile group: 'com.google.appengine', name: 'appengine-api-1.0-sdk', version: '1.9.60'
