--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile group: 'com.github.rholder', name: 'guava-retrying', version: '2.0.0'
     compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    compile group: 'net.sf.opencsv', name: 'opencsv', version: '2.3'
 
     compile group: 'com.google.appengine.tools', name: 'appengine-gcs-client', version: '0.7'
     compile group: 'com.google.appengine', name: 'appengine-tools-sdk', version: '1.9.60'
