bug fixing user registration

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,7 +34,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>OauthCallback</servlet-name>
-        <url-pattern>/auth/oauthcallback</url-pattern>
+        <url-pattern>/oauthcallback</url-pattern>
     </servlet-mapping>
 
     <servlet>
