--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ target/
 /src/test/resources/key/*
 /src/main/resources/inviti/inviti.csv
 /src/main/resources/key/secret.json
+/src/main/resources/db/local_db.bin
