--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,8 @@ appengine {  // App Engine tasks configuration
     run {      // local (dev_appserver) configuration (standard environments only)
         port = 8080
         automaticRestart = true
-        jvmFlags = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
-        //jvmFlags = ["-Dappengine.fullscan.seconds=5", "-Ddatastore.backing_store=\"/Users/tallesi001/IdeaProjects/wedding/src/main/resources/db\""]
+        //jvmFlags = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
+        jvmFlags = ["-Dappengine.fullscan.seconds=5", "-Ddatastore.backing_store=\"/Users/tallesi001/IdeaProjects/wedding/src/main/resources/db\""]
     }
 
     deploy {   // deploy configuration
@@ -63,5 +63,5 @@ appengine {  // App Engine tasks configuration
 group = 'it.simostefi.wedding'   // Generated output GroupId
 version = '1.0-SNAPSHOT'          // Version in generated output
 
-sourceCompatibility = 1.8  // App Engine Standard uses Java 8
-targetCompatibility = 1.8  // App Engine Standard uses Java 8
+sourceCompatibility = 1.7  // App Engine Standard uses Java 7
+targetCompatibility = 1.7  // App Engine Standard uses Java 7
