--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,15 @@ dependencies {
     compile group: 'com.googlecode.objectify', name: 'objectify', version: '5.1.21'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
-    compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    compile group: 'com.google.guava', name: 'guava', version: '20.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
-    compile group: 'com.github.rholder', name: 'guava-retrying', version: '2.0.0'
-    compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
-    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    compile (group: 'com.github.rholder', name: 'guava-retrying', version: '2.0.0'){
+        exclude group: 'com.google.guava', module: 'guava'
+    }
+    compile (group: 'org.reflections', name: 'reflections', version: '0.9.11'){
+        exclude group: 'com.google.guava', module: 'guava'
+    }
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile group: 'net.sf.opencsv', name: 'opencsv', version: '2.3'
 
     compile group: 'com.google.appengine.tools', name: 'appengine-gcs-client', version: '0.7'
